Mudanças na tela de aluno (sidebar e header)

--- a/solidare/portal/templates/calendario.html
+++ b/solidare/portal/templates/calendario.html
@@ -151,7 +151,7 @@
   </style>
 </head>
 <body>
-  <a href="{% if request.user.professor %}/professor/{% else %}/aluno/{% endif %}" class="back-arrow">←</a>
+  <a href="{% if request.user.professor %}/avisos/{% else %}/avisosA/{% endif %}" class="back-arrow">←</a>
 
   <div class="calendar">
     <header>
