--- a/solidare/portal/templates/horario.html
+++ b/solidare/portal/templates/horario.html
@@ -122,7 +122,7 @@
 </style>
 
 <div class="container position-relative">
-  <a href="{% url 'pagina_aluno' %}" class="voltar-btn">
+  <a href="{% url 'lista_avisos_aluno' %}" class="voltar-btn">
     <i class="fas fa-arrow-left"></i> Voltar
   </a>
 
